sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: ';' expected but ',' found.
        if (plusPetit(i+eca,i)) {echange(i+eca,i),e += 1}
                                                 ^